[package]
name = "fielding_bits"
version = "0.1.0"
authors = ["Sam Leonard <samuel.leonard@student.manchester.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "~0.16.8"
rgb = "~0.8.25"
rayon = "~1.5.0"
anyhow = "~1.0.40"
